# kaki

./: .gitignore  .gitmodules  AGENTS.md  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
data/: kaki-signal.sh  meson.build  org.kaki.app.desktop.in  org.kaki.app.gschema.xml  org.kaki.app.metainfo.xml.in  org.kaki.app.service.in
data/icons/: meson.build
docs/: testing.md
docs/plans/: README.md  phase-0-scaffold-fix.md  phase-1-transcribe-submodule.md  phase-2-basic-transcription.md  phase-3-dictation-mode.md  phase-4-preferences-ui.md  phase-5-global-shortcuts.md  phase-6-remote-openai-backend.md  phase-7-testing-framework.md  phase-8-shortcuts-dialog-sync.md  phase-9-i18n.md  porting-windows-macos.md
po/: LINGUAS  POTFILES.in  kaki.pot  meson.build
src/: application.vala  config.vapi  kaki.gresource.xml  main.vala  meson.build  shortcuts-dialog.ui  window.ui  window.vala
src/services/: global-shortcuts.vala  keystroke.vala  local-source.vala  model-downloader.vala  recorder.vala  remote-openai-source.vala  secret-store.vala  transcriber.vala  transcription-source.vala
src/ui/: preferences.ui  preferences.vala
src/vapi/: libei-1.0.vapi  libei-shim.c  libei-shim.h  signal-shim.c  signal-shim.h  transcribe.vapi
tests/: README.md  conftest.py  meson.build  requirements.txt
tests/helpers/: download_cli.vala  meson.build  remote_cli.vala
tests/integration/: test_model_downloader.py  test_multipart_shape.py  test_remote_openai_mock.py  test_secret_store.py
tests/network/: test_hf_urls.py
tests/ui/: test_app_smoke.py  test_preferences_render.py
tests/unit/: test_gresource.py  test_gsettings.py  test_wav_sample.py
